--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>Guest List</h1>
         <form id="guest-Form">
            <label for="GuestName">Guest Name</label>
-           <input type="text" id="GuestName" placeholder="Guest Name">
+           <input type="text" id="GuestName" placeholder="Guest Name" required >
            <button type="submit">Add Guest</button>
 
         </form>
