updated version of the html,javscript

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 
         </form>
         <!-- guest categor ...how the guest is categorized -->
-        <select id="Guest-Category">
-            <option value="Friend">Friend</option>
-            <option value="Family">Family</option>
-            <option value="Colleague">Colleague</option>
-        </select>
+        <div id="guest-category">
+            <button type="button" data-category="friend">Friend</button>
+             <button type="button" data-category="family">Family</button>
+              <button type="button" data-category="collegue">collegue</button>
+        </div>
         <!-- displays the guest list -->
         <ul id="Guest-List"></ul>
     </div>
